# drpc-service

./: .gitignore  Cargo.toml  DELIVERABLES.md  README.md  RFC.md  ROADMAP.md  config.example.toml  docs.json
.github/workflows/: ci.yml  docs.yml
consumer-sdk/: README.md  package-lock.json  package.json  tsconfig.json
consumer-sdk/src/: attestation.test.ts  attestation.ts  client.ts  cu.test.ts  cu.ts  discovery.test.ts  discovery.ts  index.ts  selector.test.ts  selector.ts  tap.test.ts  tap.ts  types.ts
contracts/: .env.example  README.md  foundry.toml
contracts/broadcast/Deploy.s.sol/42161/: run-latest.json
contracts/script/: Deploy.s.sol  Register.s.sol  SetupE2E.s.sol
contracts/src/: RPCDataService.sol
contracts/src/interfaces/: IRPCDataService.sol
contracts/test/: EIP712CrossLanguage.t.sol  RPCDataService.integration.t.sol  RPCDataService.t.sol  StateProofVerifier.t.sol
crates/dispatch-gateway/: gateway.example.toml
crates/dispatch-gateway/src/: config.rs  discovery.rs  qos.rs  registry.rs  selector.rs
crates/dispatch-gateway/src/routes/: aggregate.rs  rpc.rs
crates/dispatch-service/: Cargo.toml
crates/dispatch-service/src/: attestation.rs  collector.rs  config.rs  escrow.rs  lib.rs  server.rs  tap.rs  tap_aggregator.rs
crates/dispatch-service/src/db/: receipts.rs
crates/dispatch-service/src/routes/: rpc.rs
crates/dispatch-service/src/rpc/: mod.rs  verify.rs
crates/dispatch-smoke/src/: main.rs
crates/dispatch-tap/src/: eip712.rs  lib.rs  rav.rs  sign.rs
crates/drpc-gateway/: Cargo.toml  gateway.example.toml
crates/drpc-gateway/src/: config.rs  error.rs  lib.rs  main.rs  probe.rs  qos.rs  registry.rs  selector.rs  server.rs
crates/drpc-gateway/src/routes/: health.rs  mod.rs  rpc.rs  ws.rs
crates/drpc-service/: Cargo.toml
crates/drpc-service/migrations/: 0001_create_tap_tables.sql
crates/drpc-service/src/: attestation.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  tap.rs
crates/drpc-service/src/db/: mod.rs  receipts.rs
crates/drpc-service/src/routes/: health.rs  rpc.rs  ws.rs
crates/drpc-service/src/rpc/: mod.rs  proxy.rs  types.rs  verify.rs
crates/drpc-tap/: Cargo.toml
crates/drpc-tap/src/: eip712.rs  lib.rs  sign.rs  types.rs
docker/: Dockerfile.gateway  Dockerfile.oracle  Dockerfile.service  gateway.example.toml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  changelog.mdx  configuration.md  consumers.md  contracts.md  deployed-addresses.md  getting-started.md  introduction.md  payments.md  providers.md  roadmap.md  verification.md
docs/src/components/: README.md  gateway.md  oracle.md  service.md  tap.md
e2e/: package.json  tsconfig.json  vitest.config.ts
e2e/src/: process.ts  rpc.test.ts  setup.ts
e2e/tmp/: gateway.toml  service.toml
indexer-agent/: config.example.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
indexer-agent/src/: agent.test.ts  agent.ts  config.ts  index.ts
subgraph/: networks.json  schema.graphql  subgraph.yaml
subgraph/abis/: RPCDataService.json
subgraph/src/: mapping.ts
