[workspace]
members = ["crates/dispatch-service", "crates/dispatch-tap", "crates/dispatch-gateway", "crates/dispatch-smoke"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Ethereum types + EIP-712
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"

# Rate limiting
governor = { version = "0.6", features = ["dashmap"] }

# Lock-free registry swapping
arc-swap = "1"

# Utils
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

# Workspace-local crates
dispatch-tap = { path = "crates/dispatch-tap" }
