[package]
name = "dispatch-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dispatch indexer service — JSON-RPC proxy with GraphTally/TAP payment middleware"

[[bin]]
name = "dispatch-service"
path = "src/main.rs"

[dependencies]
dispatch-tap.workspace = true

tokio.workspace = true
futures-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
hex.workspace = true

# Ethereum provider + local signer for on-chain RAV collection
alloy = { version = "0.5", features = ["provider-http", "signer-local", "contract"] }
