[package]
name = "drpc-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dRPC gateway — QoS-aware provider selection, TAP receipt signing, JSON-RPC routing"

[[bin]]
name = "drpc-gateway"
path = "src/main.rs"

[dependencies]
drpc-tap.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
alloy-primitives.workspace = true
k256.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
rand.workspace = true
