[package]
name = "drpc-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dRPC indexer service — JSON-RPC proxy with GraphTally/TAP payment middleware"

[[bin]]
name = "drpc-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
k256.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
hex.workspace = true
